# MineCraft-One-Week-Challenge

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Controls.txt  LICENSE  Makefile  READ ME.txt  README.md  commit_test.txt  config.txt  macosx.txt  mc-one-week-challenge.sln  mc-one-week-challenge.vcxproj  premake5.lua  shaders.txt  vcpkg-configuration.json  vcpkg.json
MinecraftWeek/Res/Blocks/: Air.block  Dirt.block  Grass.block  OakLeaf.block  Rose.block  Sand.block  Stone.block  TallGrass.block
MinecraftWeek/Shaders/: ChunkFragment.glsl  SkyboxFragment.glsl  SkyboxVertex.glsl
Res/: info.txt
Res/Blocks/: Air.block  BlockDB.csv  Cactus.block  CobbleStone  DeadShrub.block  Dirt.block  Glass.block  GlassBorderless.block  Grass.block  OakBark.block  OakLeaf.block  OakPlank.block  OakSapling.block  Rose.block  Sand.block  Stone.block  TallGrass.block  Water.block
Shaders/: BasicFragment.glsl  BasicVertex.glsl  Chunk.frag  Chunk.vert  ChunkFragment.frag  ChunkFragment.glsl  ChunkVertex.glsl  ChunkVertex.vert  Cloud.frag  Cloud.vert  Combine.frag  Combine.vert  Flare.frag  Flare.vert  Flora.frag  Flora.vert  Gaussian.frag  GaussianH.frag  GaussianH.vert  GaussianV.frag  GaussianV.vert  GodRays.frag  GodRays.vert  MBlur.frag  Mask.frag  PostProcess.frag  PostProcess.vert  PostProcessFragment.frag  PostProcessFragment.glsl  ProcSky.frag  ProcSky.vert  Radial.frag  Skybox.frag  SkyboxFragment.frag  SkyboxFragment.glsl  SunShaderVertex.glsl  SunShaderVertex.vert  Water.frag  Water.vert  WaterFragment.frag  (+5 more)
Source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Config.cpp  Config.h  Context.cpp  Context.h  Controller.cpp  Controller.h  Entity.h  GlobalInfo.cpp  GlobalInfo.h  Main.cpp  Mesh.h  Model.cpp  Model.h  RenderSettings.cpp  RenderSettings.h  ShaderData.cpp  ShaderData.h  ToggleKey.cpp
Source/Filter/: BasicFilter.cpp  BasicFilter.h
Source/GL/: GLFunctions.cpp  GLFunctions.h
Source/GLAD/: glad.cpp  glad.h
Source/Input/: Keyboard.cpp  Keyboard.h  ToggleKey.cpp  ToggleKey.h
Source/Item/: ItemStack.cpp  ItemStack.h  ItemType.h  Material.cpp  Material.h
Source/Maths/: Frustum.cpp  Frustum.h  GeneralMaths.cpp  GeneralMaths.h  Matrix.cpp  Matrix.h  NoiseGenerator.cpp  NoiseGenerator.h  Ray.cpp  Ray.h  Vector2XZ.cpp  Vector2XZ.h  glm.h
Source/Physics/: AABB.cpp  AABB.h
Source/Player/: Player.cpp  Player.h
Source/PostProcess/: Antialiasing.cpp  Antialiasing.h  Bloom.cpp  Bloom.h  BloomFilter.cpp  BloomFilter.h  Combine.cpp  Combine.h  FlareShader.cpp  FlareShader.h  Framebuffer.cpp  Framebuffer.h  GHShader.cpp  GHShader.h  GVShader.cpp  GVShader.h  GaussianBlur.cpp  GaussianBlur.h  GodRayShader.cpp  GodRayShader.h  GodRays.cpp  GodRays.h  Godrays.cpp  Godrays.h  HorizontalGaussian.cpp  HorizontalGaussian.h  ImageRenderer.cpp  ImageRenderer.h  MBlur.cpp  MBlur.h  Mask.cpp  Mask.h  Mask2.cpp  Mask2.h  MaskShader.cpp  MaskShader.h  MotionBlur.cpp  MotionBlur.h  PostProcessRenderer.cpp  PostProcessRenderer.h  (+6 more)
Source/Renderer/: ChunkRenderer.cpp  ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  FloraRenderer.cpp  FloraRenderer.h  Framebuffer.cpp  Framebuffer.h  QuadRenderer.cpp  QuadRenderer.h  RenderInfo.h  RenderMaster.cpp  RenderMaster.h  SFMLRenderer.cpp  SFMLRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  WaterRenderer.cpp  WaterRenderer.h
Source/Shaders/: BasicShader.cpp  BasicShader.h  ChunkShader.cpp  ChunkShader.h  CloudShader.cpp  CloudShader.h  FloraShader.cpp  FloraShader.h  PostProcessShader.cpp  PostProcessShader.h  ProcSkyShader.cpp  ProcSkyShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  SkyboxShader.cpp  SkyboxShader.h  SunShader.cpp  SunShader.h  WaterShader.cpp  WaterShader.h
Source/Sky/: Cloud.cpp  Cloud.h  ProcSky.cpp  ProcSky.h  SkyManager.cpp  SkyManager.h
Source/States/: MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  PlayingState.cpp  PlayingState.h  StateBase.h
Source/Texture/: BasicTexture.cpp  BasicTexture.h  CubeTexture.cpp  CubeTexture.h  TextureAtlas.cpp  TextureAtlas.h
Source/Tick/: TickManager.cpp  TickManager.h  TickObject.h
Source/Util/: Array2D.h  CsvLoader.cpp  CsvLoader.h  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  FileUtil.h  NonCopyable.h  NonMovable.h  Random.cpp  Random.h  Singleton.h
Source/World/: World.cpp  World.h  WorldConstants.h
Source/World/Block/: Block.h  BlockDB.cpp  BlockDB.h  BlockData.cpp  BlockData.h  BlockDatabase.cpp  BlockDatabase.h  BlockId.h  ChunkBlock.cpp  ChunkBlock.h
Source/World/Block/BlockTypes/: BlockType.cpp  BlockType.h
Source/World/Chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkSection.cpp  ChunkSection.h  IChunk.h
Source/World/Event/: IWorldEvent.h  PlayerDigEvent.cpp  PlayerDigEvent.h
Source/World/Generation/: Biome.cpp  Biome.h  DesertBiome.cpp  DesertBiome.h  GrasslandBiome.cpp  GrasslandBiome.h  OceanBiome.cpp  OceanBiome.h  StructureBuilder.cpp  StructureBuilder.h  TemperateForestBiome.cpp  TemperateForestBiome.h  TerrainGenerator.cpp  TerrainGenerator.h  TreeGenerator.cpp  TreeGenerator.h
Source/World/Generation/Biome/: Biome.cpp  Biome.h  DesertBiome.cpp  DesertBiome.h  GrasslandBiome.cpp  GrasslandBiome.h  LightForest.cpp  LightForest.h  OceanBiome.cpp  OceanBiome.h  TemperateForestBiome.cpp  TemperateForestBiome.h
Source/World/Generation/Structures/: StructureBuilder.cpp  StructureBuilder.h  TreeGenerator.cpp  TreeGenerator.h
Source/World/Generation/Terrain/: ClassicOverWorldGenerator.cpp  ClassicOverWorldGenerator.h  SuperFlatGenerator.cpp  SuperFlatGenerator.h  TerrainGenerator.h
Source/glad/: glad.c  glad.h
cmake_modules/: FindGLM.cmake
scripts/: build.sh  debug.sh  run.sh
